[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64",
    "setuptools-scm>=7",
]

[project]
name = "jitcxde_common"
dynamic = ["version"]
description = "Common code for JiTC*DE"
readme = "README.rst"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Gerrit Ansmann", email = "gansmann@uni-bonn.de" },
]
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "jinja2",
    "numpy",
    "setuptools",
    "symengine>=0.3.1.dev0",
]

[project.urls]
Documentation = "https://jitcde-common.readthedocs.io"
Homepage = "https://github.com/neurophysik/jitcxde_common"

[tool.setuptools.packages.find]
include = [
    "jitcxde_common*",
]

[tool.setuptools_scm]
write_to = "jitcxde_common/version.py"
